--- a/index.html
+++ b/index.html
@@ -2,18 +2,18 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>My Daily Mood</title>
+  <title>MoodTracker</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <!-- LOGIN SCREEN -->
   <div id="loginScreen">
-    <h1>Welcome to My Daily Mood</h1>
+    <h1>Sharing my Daily Mood</h1>
 
-    <label for="username">Enter your username:</label><br />
+    <label for="username">Username:</label><br />
     <input type="text" id="username" placeholder="Your name or username" /><br />
 
-    <label for="phoneEmail">Enter your email or phone number:</label><br />
+    <label for="phoneEmail">Email or phone number:</label><br />
     <input type="text" id="phoneEmail" placeholder="Email or Phone" /><br />
 
     <button id="loginBtn">Login</button>
