--- a/index.html
+++ b/index.html
@@ -2,53 +2,88 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>MoodTracker</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>MoodTrack</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <!-- LOGIN SCREEN -->
-  <div id="loginScreen">
-    <h1>Sharing my Daily Mood</h1>
+  <div class="container">
 
-    <label for="username">Username:</label><br />
-    <input type="text" id="username" placeholder="Your name or username" /><br />
+    <!-- Login Screen -->
+    <div id="loginScreen">
+      <h2>Welcome to MoodTrack</h2>
+      <label for="contact">Email or Phone Number:</label>
+      <input type="text" id="contact" placeholder="you@example.com or +123456789" />
 
-    <label for="phoneEmail">Email or phone number:</label><br />
-    <input type="text" id="phoneEmail" placeholder="Email or Phone" /><br />
+      <label for="username">Username:</label>
+      <input type="text" id="username" placeholder="Your name or nickname" />
 
-    <button id="loginBtn">Login</button>
-  </div>
-
-  <!-- APP SCREEN -->
-  <div id="appScreen" style="display:none;">
-    <h1 id="welcomeMessage"></h1>
-
-    <div class="moods">
-      <button onclick="selectMood('😊')">😊 Happy</button>
-      <button onclick="selectMood('😐')">😐 Neutral</button>
-      <button onclick="selectMood('😔')">😔 Sad</button>
-      <button onclick="selectMood('😡')">😡 Angry</button>
-      <button onclick="selectMood('😴')">😴 Tired</button>
-      <button onclick="selectMood('😰')">😰 Anxious</button>
-      <button onclick="selectMood('😁')">😁 Really Happy</button>
-      <button onclick="selectMood('💔')">💔 Heartbroken</button>
-      <button onclick="selectMood('🤢')">🤢 Disgusted</button>
-      <button onclick="selectMood('😍')">😍 In Love</button>
+      <button onclick="login()">Login</button>
     </div>
 
-    <div id="moodForm" style="display:none;">
-      <textarea id="comment" placeholder="Why do you feel this way? (optional)"></textarea><br />
-      <label>
-        <input type="checkbox" id="needHelp" />
-        I would like someone to check on me
-      </label><br />
-      <button onclick="saveMood()">Submit</button>
+    <!-- Main App -->
+    <div id="mainApp" style="display: none;">
+      <h2 id="welcomeMessage"></h2>
+
+      <p>How are you feeling today? Select the emoji that matches your mood:</p>
+
+      <div class="mood-grid">
+        <button onclick="selectMood('🥳 Very Very Happy')" title="Overflowing with joy">🥳<br>Celebrating</button>
+        <button onclick="selectMood('😔 Sad')" title="Feeling down">😔<br>Sad</button>
+        <button onclick="selectMood('😠 Angry')" title="Frustrated or mad">😠<br>Angry</button>
+        <button onclick="selectMood('😰 Anxious')" title="Nervous or stressed">😰<br>Anxious</button>
+        <button onclick="selectMood('😱 Scared')" title="Frightened or uneasy">😱<br>Scared</button>
+        <button onclick="selectMood('😴 Tired')" title="Exhausted or sleepy">😴<br>Tired</button>
+        <button onclick="selectMood('😄 Excited')" title="Looking forward to something">😄<br>Excited</button>
+        <button onclick="selectMood('🤒 Sick')" title="Not feeling well">🤒<br>Sick</button>
+        <button onclick="selectMood('🤩 Proud')" title="Accomplished something">🤩<br>Proud</button>
+        <button onclick="selectMood('😕 Confused')" title="Need clarity">😕<br>Confused</button>
+        <button onclick="selectMood('❤️ In Love')" title="Heart full of love">❤️<br>In Love</button>
+      </div>
+
+      <!-- Comment Form -->
+      <div id="moodForm" style="display: none;">
+        <h3>Tell us more</h3>
+        <label for="comment">Comment (optional):</label>
+        <textarea id="comment" rows="3" placeholder="Why are you feeling this way?"></textarea>
+
+        <label>
+          <input type="checkbox" id="needHelp" />
+          I’d like someone to check in with me
+        </label>
+
+        <button onclick="saveMood()">Save</button>
+      </div>
+
+      <!-- Mood History -->
+      <h3>Your Mood History</h3>
+      <ul id="history"></ul>
+
+      <!-- Button to go to moods overview -->
+      <button onclick="showOverview()" style="margin-top: 1em;">See All Moods Overview</button>
     </div>
 
-    <h2>Mood History</h2>
-    <ul id="history"></ul>
+    <!-- Moods Overview Screen -->
+    <div id="overviewScreen" style="display: none;">
+      <h2>All Moods Overview</h2>
+      <table id="overviewTable" border="1" style="width: 100%; max-width: 600px; margin: auto; border-collapse: collapse;">
+        <thead>
+          <tr>
+            <th>Username</th>
+            <th>Mood</th>
+            <th>Date & Time</th>
+          </tr>
+        </thead>
+        <tbody>
+          <!-- Filled dynamically -->
+        </tbody>
+      </table>
+      <button onclick="backToMain()" style="margin-top: 1em;">Back to Mood Entry</button>
+    </div>
+
   </div>
 
   <script src="script.js"></script>
 </body>
 </html>
+
